fixed references to renamed EpcisConstants